--- a/TwoSum/TestTwoSum/TestTwoSum.csproj
+++ b/TwoSum/TestTwoSum/TestTwoSum.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -7,6 +7,7 @@
 
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
+    <RootNamespace>$(MSBuildProjectName.Replace(" ", ""))</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -17,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ProjectTemplate\ProjectTemplate.csproj" />
+    <ProjectReference Include="..\TwoSum\TwoSum.csproj" />
   </ItemGroup>
 
   <ItemGroup>
